--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "dependencies": {
     "@apollo/client": "^3.7.1",
     "@popperjs/core": "^2.11.6",
+    "@vue/apollo-option": "^4.0.0-alpha.20",
     "graphql": "^16.6.0",
     "graphql-tag": "^2.12.6",
+    "pinia": "^2.0.24",
     "vue": "^3.2.41",
     "vue-router": "^4.1.5"
   },
